<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Flow Wallet</string>
    <string name="next">Next</string>
    <string name="list">List</string>
    <string name="view_as">View as</string>
    <string name="creating_account">Creating Your Account…</string>
    <string name="secure_design">Secure by Design</string>
    <string name="secure_design_2">Using Device Keys with Hardware-Grade Security, Flow Wallet is an ultra-secure hardware wallet you can trust</string>
    <string name="username">Username</string>
...
    <string name="reset_pin">Please type\nyour new PIN</string>
    <string name="reset_check_pin">Please type\nyour new PIN again</string>
    <string name="check_pin_tip">Please make sure you can remember your PIN.</string>
    <string name="create_pin_tip">So no one else but you can unlock your wallet.</string>
    <string name="backup_pin_tip">Your PIN code will be used to securely encrypt your account backup</string>
    <string name="mnemonic_question_title">Select the word %1$s</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Settings</string>
    <string name="things_you">Things You \nNeed to Know</string>

    <!-- Surge Pricing Dialog -->
    <string name="surge_pricing_title">Are you really sure that you want to continue with surge pricing?</string>
...
    <string name="backup_manually">Backup Manually</string>
    <string name="backup_to_google_drive">Backup to google drive</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="recovery_phrase_note">Write down these words in the right order and store them somewhere safe.</string>
    <string name="recovery">Recovery</string>
    <string name="phrase">Phrase</string>
    <string name="nft">NFTs</string>
    <string name="nft_detail">NFT Detail</string>
    <string name="activity">Activity</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="restore_wallet_tip">Restore your wallet with the 12 word recovery phrase that you have written down.</string>
    <string name="choose_account">Choose Account</string>
    <string name="multiple_accounts_found">Multiple Accounts found.</string>
    <string name="enter_password">Enter Password</string>
    <string name="continue_str">Continue</string>
...
    <string name="purchase_price">Purchase Price</string>
    <string name="coins">Coins</string>
    <string name="collections">Collections</string>
    <string name="collections_count">%1$d Collections</string>
    <string name="collectibles_count">%1$d Collectibles</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="saved_to_album">Saved to album</string>
    <string name="view_on_web">View on web</string>
    <string name="nft_collections">NFT Collections</string>
    <string name="empty_title">Your collection is waiting to shine!</string>
...
    <string name="restore_with_recovery_phrase">Restore with Recovery Phrase</string>
    <string name="not_logged_in_toast">You are not logged in to the wallet</string>
    <string name="free_gas_fee">Free gas fee</string>
    <string name="free_gas_fee_desc">* Allow Flow Wallet to pay the gas fee for all my transactions.</string>
    <string name="show_in_account_list">Show in account list</string>
    <string name="file_picker_title">Select File</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="hold_to_confirm">Hold to Confirm</string>
    <string name="hold_to_sign">Hold to sign</string>
    <string name="enable">Enable</string>
    <string name="sign_message">Sign Message</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transaction_common_title">Exec Transaction</string>
...
    <string name="reset_wallet_tips">Removing the wallet from Flow Wallet does not remove the wallet
        from Flow blockchain. You can import your wallet again using your Recovery Phrase or Google Drive Backup.</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="import_wallet_button">I already have an account</string>
    <string name="import_str">IMPORT</string>
    <string name="explore_new_nfts">Explore new NFTs</string>
    <string name="network_error">Network error</string>
    <string name="claim">Claim</string>
    <string name="claim_free_domain">Claim for your <font color="#32E355">FREE</font> Lilico domain!</string>
    <string name="claim_free_domain_at_lilico">Claim <font color="#32E355">Free</font> Domain\nAt Lilico</string>
...
    <string name="import_wallet_note">Restore your wallet using a backup.</string>
    <string name="from_device_backup">From Device Backup</string>
    <string name="from_device_backup_note">Restore from another mobile or extension wallet</string>
    <string name="from_key_store">From Keystore</string>
    <string name="from_key_store_note">Import keystore file (Blocto Backup).</string>
    <string name="key_store">Keystore</string>
    <string name="seed_phrase">Seed Phrase</string>
    <string name="restore_seed_phrase_advanced">Advanced</string>
    <string name="restore_seed_derivation_path">Derivation Path</string>
    <string name="restore_seed_passphrase">Passphrase</string>
    <string name="restore_seed_phrase_hint">12 or 24 words split with whitespace</string>
    <string name="restore_seed_phrase_derivation_path_hint">Derivation path(m/44\'/539\'/0\'/0/0)</string>
    <string name="restore_seed_phrase_passphrase_hint">Passphrase (Optional)</string>
    <string name="restore_private_key_hint">Enter your private key</string>
    <string name="key_store_json_hint">You can import the JSON file from other wallet (eg. Blockto)</string>
    <string name="key_store_password_hint">Enter password for JSON file</string>
    <string name="key_store_address_hint">Enter your Flow address (Optional)</string>
...
    <string name="enable_evm_title_enable_the_path">Enable the path</string>
    <string name="enable_evm_title_to_evm">to EVM on Flow</string>
    <string name="enable_evm_title">Enable the path to EVM on Flow !</string>
    <string name="evm_on_flow">EVM on Flow</string>
    <string name="flow_evm">FlowEVM</string>
    <string name="label_evm">EVM</string>
    <string name="label_flow">FLOW</string>
    <string name="label_eoa">EOA</string>
    <string name="move">Move</string>
    <string name="current_vm">Current Network</string>
    <string name="cadence">Cadence</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="move_token">Move Token</string>
...
    <string name="my_own_address">My Own Address</string>
    <string name="custom_address">Custom Address</string>
    <string name="enter_custom_address">Enter custom address</string>
    <string name="add_evm_account">Add an %1$s account on Flow</string>
    <string name="active_account">Active account</string>
    <string name="add_account">Add account</string>
    <string name="confirm_to_copy_address">Confirm to copy address</string>
    <string name="confirm_copy_address_tips">You have copied an EVM address on the Flow network, please make sure you only send assets on the Flow network to this address otherwise they will be lost.</string>
    <string name="evm_on_flow_address">EVM on Flow address</string>
    <string name="recover_profile">Recover profile</string>
</resources>

