...


    @SuppressLint("SetTextI18n")
    private fun configureMoveFeeLayout() {
        with(binding) {
            tvMoveFee.text = if (needMoveFee) {
                "0.0001"
            } else {
                "0.00"
            } + " FLOW"
            tvMoveFeeTips.text = (if (needMoveFee) R.string.move_fee_tips else R.string.no_move_fee_tips).res2String()
            clMoveFee.setVisible(AppConfig.coverBridgeFee().not())
        }
    }

...
